Conclui etapa 4 com Spring Data JPA e OpenFeign